navbar fixed on mobile

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -235,6 +235,7 @@ img {
   padding: 0.5rem 1rem;
   transition: 0.15s ease-in-out;
 }
+
 .btn * {
   margin:0;
 }
@@ -339,15 +340,16 @@ img {
 }
 
 .nav-page-other {
-  display: lex;
   flex-direction: column;
   justify-content: center;
-  width: 8rem;
+  align-items: flex-start;
   position: fixed;
   z-index: 10;
+  width: 8rem;
   top: 0;
   bottom: 0;
   left: 0.6rem;
+  right: auto;
   margin: 0;
   animation: slide-in-left .3s ease-out both
 }
@@ -449,13 +451,13 @@ img {
   flex-direction: column;
   align-items: flex-start;
   justify-content: center;
-  margin-left: 5%;
+  margin-left: 2rem;
   color: white;
   font-weight: 300;
 }
 
 .p1-face {
-  margin-right: 5%;
+  margin-right: 2rem;
   height: 18rem;
   width: auto;
   background-color: rgba(255, 255, 255, 0.15);
@@ -557,7 +559,7 @@ img {
 }
 
 @media (min-width: 800px) {
-  #page-2-1, #page-2-2 {
+  #page-2-1 {
     display: none;
   }
 }
@@ -565,6 +567,12 @@ img {
 @media (max-width: 800px) {
   #page-2 {
     display: none;
+  }
+}
+
+@media (max-width: 500px) {
+  .p2-timeline-year {
+    font-size: 0.85rem;
   }
 }
 
